refactor: Alteraçao dos DTOs de class para record + atualizaçao dos Services e Controllers